<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app1="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".pstforgot_password.PSTForgotPasswordActivity">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent">

        <ImageView
            android:id="@+id/imgUser"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:contentDescription="@string/background_splash"
            android:scaleType="centerCrop"
            android:src="@drawable/ps_splash" />

        <View
            android:id="@+id/view1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/transbackgroundblack" />
    </FrameLayout>

    <com.peerstars.android.pstutilities.PSTCustomTextView
        android:id="@+id/CustomTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="108dp"
        android:text="@string/company_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        app1:customFont="varsity_regular.ttf" />

    <com.peerstars.android.pstutilities.PSTCustomTextView
        android:id="@+id/CustomTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/CustomTextView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/remembering"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app1:customFont="varsity_regular.ttf" />

    <com.peerstars.android.pstutilities.PSTCustomTextView
        android:id="@+id/CustomTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/CustomTextView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/your_yearbook"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app1:customFont="varsity_regular.ttf" />

    <EditText
        android:id="@+id/txtEmailAddress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="16dp"
        android:layout_below="@id/CustomTextView3"
        android:background="@drawable/transbackgroundgrey"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="10sp"
        android:paddingTop="5dp"
        android:paddingEnd="5sp"
        android:paddingBottom="5dp" />

    <TextView
        android:id="@+id/txtSubmit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        android:layout_marginTop="16sp"
        android:layout_below="@id/txtEmailAddress"
        android:background="@drawable/transbackgroundblack"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/reset_password"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:onClick="btnSubmit_OnClick" />

</RelativeLayout>
